--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.0",
+    "lenis": "^1.3.17",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
